<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/baseline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuego_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fuego_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuego_input_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medida_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/medida_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medida_input_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tipo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo_input_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/marca_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca_input_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observaciones_input" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/observaciones_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observaciones_input_hint"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_send" />


    </LinearLayout>
</LinearLayout>

